[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Location.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.333333, 0.615686, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.815686, 0.992157, 1, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.333333, 0.615686, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.168627, 0.239216, 0.447059, 1 )

[node name="Location" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -363.0
margin_top = -400.0
margin_right = 600.0
margin_bottom = 180.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -963.0
margin_bottom = 580.0

[node name="ChoicesContainer" type="MarginContainer" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = -104.0
margin_right = 146.5
margin_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ChoicesContainer"]
margin_right = 293.0
margin_bottom = 208.0
custom_constants/separation = 7
alignment = 1

[node name="Choice1" type="Button" parent="Background/ChoicesContainer/VBoxContainer"]
margin_right = 293.0
margin_bottom = 46.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Choice 1"

[node name="Choice2" type="Button" parent="Background/ChoicesContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 293.0
margin_bottom = 100.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Choice 2"

[node name="Choice3" type="Button" parent="Background/ChoicesContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 293.0
margin_bottom = 154.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Choice 3"

[node name="Leave" type="Button" parent="Background/ChoicesContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 293.0
margin_bottom = 208.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Leave"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.0
margin_top = -101.0
margin_right = 223.0
margin_bottom = 101.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Leave"
dialog_text = "Do you want to leave?"

[connection signal="pressed" from="Background/ChoicesContainer/VBoxContainer/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="Background/ChoicesContainer/VBoxContainer/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="Background/ChoicesContainer/VBoxContainer/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="pressed" from="Background/ChoicesContainer/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="confirmed" from="Background/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
